Fixed bug #31832 (SOAP encoding problem with complex types in WSDL mode with multiple parts)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@178910 c90b9560-bf6c-de11-be94-00142212c4b1